# ModelInference

./: .gitignore  API_CONTRACT.md  README.md  description.md
backend/: pyproject.toml
backend/app/: cascade.py  config.py  db.py  jobs.py  main.py  models.py  schemas.py  serializers.py
backend/app/routers/: checkpoints.py  evaluations.py  experiments.py  inferences.py  projects.py  settings.py
backend/app/services/: copy_service.py  inference_service.py  vlm_service.py
backend/scripts/: mock_inference.py
backend/tests/: conftest.py  test_api.py  test_fixes.py  test_metadata.py  test_settings.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  main.tsx  styles.css  types.ts
frontend/src/components/: CheckpointPanel.tsx  InferencePanel.tsx  ui.tsx
frontend/src/pages/: ComparePage.tsx  ExperimentDetailPage.tsx  InferenceBrowsePage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
frontend/src/theme/: ThemeModeContext.tsx  sharedStyles.ts
